--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-    "name": "protest-pal-frontend",
-    "version": "1.0.0",
-    "description": "A property tax protesting app using React Context",
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    },
-    "dependencies": {
-      "react": "^16.8.0",
-      "react-dom": "^16.8.0",
-      "react-scripts": "4.0.3"
-    },
-    "devDependencies": {
-      // Your dev dependencies go here
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
-    }
+  "name": "protestpal-frontend",
+  "version": "1.0.0",
+  "description": "Are you tired of skyrocketing property taxes and looking for a way to make your voice heard? Look no further than TaxRevolt, the ultimate property tax protesting app!",
+  "main": "index.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-scripts": "4.0.3"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "latest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
-  
+}
