Adding react-bootstrap

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-bootstrap": "latest",
+    "bootstrap": "latest"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "latest"
