--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "4.0.3",
-    "react-bootstrap": "2.9.0"
+    "react-bootstrap": "2.9.0",
+    "bootstrap": "5.3.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "latest"
